[package]
name = "arcropolis-api"
version = "0.1.0"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2018"

[dependencies]
crc32fast = "1.2"
arcropolis-api-macro = { path = "./arcropolis-api-macro" }
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["smash-runtime", "rust-zstd"] }
